--- a/OnionConsumeWebAPI/Views/IndigoTripsell/_IndigoServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/IndigoTripsell/_IndigoServiceRequestsPartialView.cshtml
@@ -606,7 +606,7 @@
                                                         }
                                                         string ssrprice = Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
                                                         string Mealcode = Model.Meals.legSsrs[0].legssrs[s].ssrCode + "_" + Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price + "_OneWay0";
-                                                        string Mealname = Model.Meals.legSsrs[0].legssrs[s].name + " ₹" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
+                                                        string Mealname = Model.Meals.legSsrs[0].legssrs[s].ssrCode + "-" + Model.Meals.legSsrs[0].legssrs[s].name + " ₹" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
                                                         string Mcode = (Mealcode.StartsWith("E", StringComparison.OrdinalIgnoreCase) ||
                                                         Mealcode.StartsWith("INFT", StringComparison.OrdinalIgnoreCase) ||
                                                         Mealcode.StartsWith("X", StringComparison.OrdinalIgnoreCase)).ToString();
@@ -822,7 +822,7 @@
                                                     {
                                                         string ssrprice = Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
                                                         string Mealcode = Model.Meals.legSsrs[0].legssrs[s].ssrCode + "_" + Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price + "_OneWay1";
-                                                        string Mealname = Model.Meals.legSsrs[0].legssrs[s].name + " ₹" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
+                                                        string Mealname = Model.Meals.legSsrs[0].legssrs[s].ssrCode + "-" + Model.Meals.legSsrs[0].legssrs[s].name + " ₹" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
 
                                                         string Mcode = (Mealcode.StartsWith("E", StringComparison.OrdinalIgnoreCase) ||
                                                         Mealcode.StartsWith("INFT", StringComparison.OrdinalIgnoreCase) ||
