--- a/OnionConsumeWebAPI/Views/AATripsell/_TripsellPatialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_TripsellPatialView.cshtml
@@ -273,30 +273,30 @@
                                                 <span class="tooltiptext">
                                                     <ul>
                                                         <li>1: CABIN BAG: 7 k.g</li>
-                                                        <li>2: CHECK-IN: 15 k.g  (1 piece)</li>
-                                                        <li>3: CANCELLATION: 3500 :-  (upto 2 hrs prior from departure)</li>
-                                                        <li>4: DATE CHANGE: 3000 :-  (upto 2 hrs prior from departure)</li>
-                                                        <li>5: SEAT : (Chargeable)</li>
-                                                        <li>6: MEAL : (Chargeable)</li>
-                                                        @* <li>7: Category Class : (Economy)</li>*@
+                                                        <li>2: CHECK-IN: 15 k.g </li>
+                                                        <li>3: CANCELLATION: 3500 (Upto 72 hrs before departure)</li>
+                                                        <li>4: DATE CHANGE: 3250 (Upto 72 hrs before departure)</li>
+                                                        <li>5: SEAT : Chargeable</li>
+                                                        <li>6: MEAL : Chargeable</li>
+                                                       
                                                     </ul>
                                                 </span>
                                             </span>
                                         }
                                         else if (item.segments[i].fares[f].productClass.Equals("HF"))
                                         {
-                                            //<div class="text-13 mt-1">Economy: @Faretype<b>Vista Flex</b></div>
+                                          
                                             <span class="tooltipF">
                                                 Economy:  @Faretype<b>Vista Flex</b>
                                                 <span class="tooltiptext">
                                                     <ul>
                                                         <li>1: CABIN BAG: 7 k.g</li>
-                                                        <li>2: CHECK-IN: 15 k.g  (1 piece)</li>
-                                                        <li>3: CANCELLATION: 3500 :-  (upto 2 hrs prior from departure)</li>
-                                                        <li>4: DATE CHANGE:  :-  FREE  (upto 2 hrs prior from departure)</li>
+                                                        <li>2: CHECK-IN: 15 k.g </li>
+                                                        <li>3: CANCELLATION: 3500 (Upto 72 hrs before departure)</li>
+                                                        <li>4: DATE CHANGE: 3000 (Upto 72 hrs before departure)</li>
                                                         <li>5: SEAT : Standard seats free</li>
-                                                        <li>6: MEAL : Free meal) per person</li>
-                                                        @* <li>7: Category Class : (Economy)</li>*@
+                                                        <li>6: MEAL : Free</li>
+                                                        
                                                     </ul>
                                                 </span>
                                             </span>
@@ -304,7 +304,7 @@
                                         }
                                         else if (item.segments[i].fares[f].productClass.Equals("LT"))
                                         {
-                                            //<div class="text-13 mt-1">Economy: @Faretype<b>Xpress lite</b></div>
+                                           
                                             <span class="tooltipF">
                                                 Economy:  @Faretype<b>Xpress lite</b>
                                                 <span class="tooltiptext">
@@ -315,7 +315,7 @@
                                                         <li>4: DATE CHANGE: </li>
                                                         <li>5: SEAT : </li>
                                                         <li>6: MEAL : </li>
-                                                        @* <li>7: Category Class :</li>*@
+                                                       
                                                     </ul>
                                                 </span>
                                             </span>
