--- a/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/ResultFlightView/_FlightResultsSortingPartialView.cshtml
@@ -485,14 +485,14 @@
                                 @if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[k].procuctclass == "EC" && Model.SimpleAvailibilityaAddResponcelist[j].Airline == Airlines.Airasia)
                                 {
                                     <td><strong>7 Kg</strong></td>
-                                    <td><strong>15 kg (1 piece)</strong></td>
+                                    <td><strong>15 kg</strong></td>
                                     <td>
 
-                                        <div>3500 (upto 2 hrs prior from departure)</div>
+                                        <div>3500 (Upto 72 hrs before departure)</div>
                                     </td>
                                     <td>
 
-                                        <div>3000 (upto 2 hrs prior from departure)</div>
+                                        <div>3250 (Upto 72 hrs before departure)</div>
                                     </td>
                                     <td>
                                         <div>
@@ -837,15 +837,15 @@
                                 else if (Model.SimpleAvailibilityaAddResponcelist[j].faresIndividual[k].procuctclass == "HF")
                                 {
                                     <td><strong>7 Kg</strong></td>
-                                    <td><strong>15 kg (1 piece)</strong></td>
+                                    <td><strong>15 kg</strong></td>
                                     <td>
 
-                                        <div>3500 (upto 2 hrs prior from departure)</div>
+                                        <div>3500 (Upto 72 hrs before departure)</div>
                                     </td>
                                     <td>
 
                                         <div>
-                                            FREE (upto 2 hrs prior from departure)
+                                            3000 (Upto 72 hrs before departure)
                                         </div>
                                     </td>
                                     <td>
@@ -858,7 +858,7 @@
                                     <td>
                                         <div>
 
-                                            (Free meal) per person
+                                            Free
                                         </div>
                                     </td>
 
